2010-09-22  Sancho Lerena <slerena@artica.es>

	* pandora_server/pandora_server.spec: Updated spec with some 
	missing deps.

2010-09-22  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed a couple of missing macros in 
	  SNMP alerts.

2010-09-22  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the parameter with
	a definition module to module creation to create 
	a local module

2010-09-21  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Do not update agent configuration if
	  not in learning mode. Fixes bug #3069710.

2010-09-21  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed the agent deletion and
	the module deletion to delete all the additional structures
	and files

2010-09-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm, lib/PandoraFMS/DataServer.pm: Update module
	  configuration from XML data files.

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Improved the last feature
	of CLI deleting the modules of all conf files of 
	the incoming directory now

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the deletion
	of all modules without policy from config file

2010-09-20  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added to CLI the deletion 
	of module from conf files when is local module

2010-09-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Do not execute alerts in stand-by.

2010-09-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Core.pm: Fixed some prototypes that led to warnings
	  in recent versions of PERL. This fixes bug #3061906.

2010-09-09  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed alert behaviour when time_from is
	  greater than time_to. Fixes bug #3048043.

2010-09-08  Sancho Lerena <slerena@artica.es>

	* util/compaq_chassis_trap_manager.pl,